# d3b-api-client-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
d3b_api_client_cli/cli/: __init__.py
d3b_api_client_cli/cli/dewrangle/: __init__.py  billing_group_commands.py  credential_commands.py  global_id_commands.py  job_commands.py  organization_commands.py  study_commands.py  volume_commands.py
d3b_api_client_cli/cli/faker/: __init__.py  global_id_commands.py
d3b_api_client_cli/cli/postgres/: __init__.py  save_db_commands.py
d3b_api_client_cli/config/: __init__.py  log.py
d3b_api_client_cli/db/postgres/: __init__.py  admin.py  save.py
d3b_api_client_cli/dewrangle/: global_id.py
d3b_api_client_cli/dewrangle/graphql/: __init__.py  common.py
d3b_api_client_cli/dewrangle/graphql/billing_group/: __init__.py  mutations.py  queries.py
d3b_api_client_cli/dewrangle/rest/: __init__.py  files.py
d3b_api_client_cli/faker/: __init__.py  global_id.py
d3b_api_client_cli/utils/: __init__.py
d3b_api_client_cli/utils/io/: __init__.py
d3b_api_client_cli/utils/misc/: __init__.py
tests/: conftest.py
tests/integration/db/: test_postgres_admin.py  test_postgres_save.py
tests/integration/dewrangle/: test_crud_billing_groups.py  test_crud_credentials.py  test_crud_organization.py  test_crud_studies.py  test_crud_volumes.py  test_global_ids.py
tests/unit/db/: test_postgres.py
tests/unit/dewrangle/: test_download.py  test_global_ids.py  test_graphql_common.py  test_job.py  test_volume.py
tests/unit/faker/: test_fake_global_ids.py
(+15 files in other folders)
